# internal/delivery/http/v1/admins.go
@@ -1,0 +1,65 @@
+package v1
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/zhashkevych/courses-backend/internal/service"
+	"net/http"
+)
+
+func (h *Handler) initAdminRoutes(api *gin.RouterGroup) {
+	students := api.Group("/admins", h.setSchoolFromRequest)
+	{
+		students.POST("/sign-in", h.adminSignIn)
+		students.POST("/auth/refresh", h.adminRefresh)
+
+		_ = students.Group("/")
+		{
+
+		}
+	}
+}
+
+// @Summary Admin SignIn
+// @Tags admins
+// @Description admin sign in
+// @ID adminSignIn
+// @Accept  json
+// @Produce  json
+// @Param input body signInInput true "sign up info"
+// @Success 200 {object} tokenResponse
+// @Failure 400,404 {object} response
+// @Failure 500 {object} response
+// @Failure default {object} response
+// @Router /admins/sign-in [post]
+func (h *Handler) adminSignIn(c *gin.Context) {
+	var inp signInInput
+	if err := c.BindJSON(&inp); err != nil {
+		newResponse(c, http.StatusBadRequest, "invalid input body")
+		return
+	}
+
+	school, err := getSchoolFromContext(c)
+	if err != nil {
+		newResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	res, err := h.adminsService.SignIn(c.Request.Context(), service.SignInInput{
+		Email:    inp.Email,
+		Password: inp.Password,
+		SchoolID: school.ID,
+	})
+	if err != nil {
+		newResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, tokenResponse{
+		AccessToken:  res.AccessToken,
+		RefreshToken: res.RefreshToken,
+	})
+}
+
+func (h *Handler) adminRefresh(c *gin.Context) {
+
+}
